# BSForge

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  env.example  gitignore  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  sd.Dockerfile  wan.Dockerfile
.devcontainer/scripts/: init-firewall.sh  on-create.sh  post-create.sh  post-start.sh
alembic/: env.py
alembic/versions/: 20251211_1125-c264d90645b4_add_channel_persona_source_and_topic_.py  20251214_0049-74130f556607_add_script_and_content_chunk_models_for_.py  20251214_1932-6171e595e298_add_video_model_for_phase_5.py  20251215_0100-add_title_text_to_scripts.py  20251217_1242-add_bm25_search_index.py  20251220_1821-consolidate_keywords_categories_to_terms.py  20251228_1337-replace_title_text_with_headline.py  20260205_0126-b46978c57b8c_add_upload_performance_series_tables.py  20260205_0318-9f679109b2c8_add_youtube_metadata_to_scripts.py
app/: CLAUDE.md  __init__.py  main.py  orchestrator.py
app/config/: __init__.py  bgm.py  channel.py  content.py  enrichment.py  filtering.py  operation.py  persona.py  rag.py  research.py  series.py  sources.py  validators.py  video.py  video_template.py  youtube_upload.py
app/core/: config.py  config_loader.py  container.py  database.py  dependencies.py  exceptions.py  logging.py  redis.py  state_machine.py  template_loader.py  types.py  vectordb.py
app/infrastructure/: __init__.py  bm25_search.py  fonts.py  http_client.py  llm.py  pgvector_db.py  tokenizer.py  youtube_api.py  youtube_auth.py
app/models/: __init__.py  base.py  channel.py  content_chunk.py  performance.py  scene.py  script.py  series.py  source.py  topic.py  upload.py  video.py
app/prompts/: __init__.py  manager.py
app/prompts/templates/: classification.yaml  cluster_summary.yaml  content_classification.yaml  query_expansion.yaml  research_query.yaml  scene_script_generation.yaml  script_generation.yaml  translation.yaml
app/schemas/: __init__.py
app/services/: CLAUDE.md  __init__.py  script_generator.py
app/services/analytics/: __init__.py  collector.py  optimal_time.py
app/services/collector/: __init__.py  base.py  cluster_enricher.py  clusterer.py  deduplicator.py  filter.py  global_pool.py  normalizer.py  pipeline.py  queue_manager.py  scorer.py  series_matcher.py  term_filter.py
app/services/collector/sources/: __init__.py  clien.py  dcinside.py  factory.py  fmkorea.py  google_trends.py  hackernews.py  korean_scraper_base.py  reddit.py  rss.py  ruliweb.py  web_scraper.py  youtube_trending.py
app/services/generator/: __init__.py  compositor.py  ffmpeg.py  pipeline.py  remotion_compositor.py  subtitle.py  thumbnail.py
app/services/generator/bgm/: __init__.py  downloader.py  manager.py  selector.py
app/services/generator/templates/: __init__.py  ass_base.ass  ass_dialogue.txt  ass_style.txt
app/services/generator/tts/: __init__.py  base.py  edge.py  elevenlabs.py  factory.py  utils.py
app/services/generator/visual/: __init__.py  ai_image.py  base.py  brave.py  dall_e.py  fallback.py  manager.py  (+6 more)
app/services/pipeline/: __init__.py  enriched_generation.py
app/services/rag/: __init__.py  chunker.py  classifier.py  context.py  embedder.py  facade.py  generator.py  prompt.py  quality.py  reranker.py  retriever.py  utils.py
app/services/research/: __init__.py  base.py  query_builder.py  tavily.py
app/services/scheduler/: __init__.py  upload_scheduler.py
app/services/uploader/: __init__.py  pipeline.py  youtube_uploader.py
app/workers/: __init__.py  analytics.py  celery_app.py  collect.py  scheduler.py  upload.py
architecture/: 00-system-overview.mermaid  01-module-structure.mermaid  02-topic-collection-diagram.mermaid  02-topic-collection.md  03-persona-rag-diagram.mermaid  03-persona-rag.md  04-video-generation.md  05-upload-scheduling.md  06-database-schema.md  07-review-dashboard.md  08-ab-testing.md  PROJECT_PLAN.md
config/: defaults.yaml
config/channels/: demo_tech.yaml
config/examples/: channel.example.yaml
config/language/: korean.yaml
config/templates/: cartoon_story.yaml  cinematic.yaml  korean_shorts_standard.yaml  korean_viral.yaml  minimal.yaml  minimal_text.yaml  news_infographic.yaml
docs/plans/: 2026-03-18-channel-driven-demo-pipeline.md  2026-03-19-shorts-quality-uplift.md
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: Root.tsx  fonts.ts
remotion/src/KoreanShorts/: animations.ts  index.tsx  types.ts
scripts/: demo_full_pipeline.py  demo_pipeline.py  demo_video_gen.py  generate_video.py  generate_video_demo.py  setup_demo_assets.py
services/sd/: sd_server.py
services/wan/: wan_server.py
tests/: CLAUDE.md  __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_content_collection.py  test_full_pipeline.py  test_rag_integration.py  test_upload_pipeline.py  test_video_generation.py
tests/unit/: test_main.py  test_orchestrator.py
tests/unit/config/: test_bgm.py  test_config.py  test_enrichment.py  test_filtering.py  test_rag.py  test_research.py  test_series.py  test_sources.py  test_validators.py  test_video.py  test_video_template.py
tests/unit/core/: test_config.py  test_config_loader.py  test_container.py  test_database.py  test_dependencies.py  test_exceptions.py  test_logging.py  test_redis.py  test_state_machine.py  test_template_loader.py  test_types.py  test_vectordb.py
tests/unit/infrastructure/: test_bm25_search.py  test_fonts.py  test_http_client.py  test_llm.py  test_pgvector_db.py  test_tokenizer.py  test_youtube_api.py  test_youtube_auth.py
tests/unit/models/: test_base.py  test_channel.py  test_content_chunk.py  test_performance.py  test_scene.py  test_script.py  test_series.py  test_source.py  test_topic.py  test_upload.py  test_video.py
tests/unit/prompts/: test_manager.py
tests/unit/scripts/: test_demo_pipeline.py
tests/unit/services/: test_script_generator.py
tests/unit/workers/: __init__.py  test_analytics.py  test_collect.py  test_scheduler.py  test_upload.py
(+74 files in other folders)
